--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
         <div id="carouselExampleControls" class="carousel slide pink-bg" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <div class="row">
+                <div class="row align-items-center">
                   <div class="col-md-7">
-                    <h1>Mega LCD TV</h1>
+                    <h1>Mega Headphone</h1>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                    <h1>$1000</h1>
+                    <h1 class="price">$1000</h1>
                     <button class="buy-now-button">Buy Now</button>
                   </div>
                   <div class="col-md-5">
@@ -55,14 +55,24 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <div class="row">
-                  <div class="col-md-7"></div>
+                <div class="row align-items-center">
+                  <div class="col-md-7">
+                    <h1>Mega LCD TV</h1>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    <h1 class="price">$1000</h1>
+                    <button class="buy-now-button">Buy Now</button>
+                  </div>
                   <div class="col-md-5"><img src="images/banner-images/tv.png" class="d-block w-100" alt="..."></div>
                 </div>
               </div>
               <div class="carousel-item">
-                <div class="row">
-                  <div class="col-md-7"></div>
+                <div class="row align-items-center">
+                  <div class="col-md-7">
+                    <h1>Mega PlayStation</h1>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    <h1 class="price">$1000</h1>
+                    <button class="buy-now-button">Buy Now</button>
+                  </div>
                   <div class="col-md-5"><img src="images/banner-images/xbox.png" class="d-block w-100" alt="..."></div>
                 </div>
               </div>
