--- a/index.html
+++ b/index.html
@@ -88,7 +88,16 @@
           </div>
       </div>
 
-
+      <div class="ontainer categories">
+        <div class="row">
+          <div class="col-md-4">
+            <h1>Watch</h1>
+            <img src="images/categories/watch.png" alt="">
+          </div>
+          <div class="col-md-4"></div>
+          <div class="col-md-4"></div>
+        </div>
+      </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
