--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="#backpack">Backpack</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact Us</a>
+                    <a class="nav-link" href="#subscribe">Contact Us</a>
                   </li>
                 </ul>
               </div>
@@ -86,18 +86,111 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
+          <div class="ontainer categories">
+            <div class="row">
+              <div class="col-md-4 cat-1 align-items-center d-flex justify-content-between">
+                <h1 class="txt">Watch</h1>
+                <img class="cat" src="images/categories/watch.png" alt="">
+              </div>
+              <div class="col-md-4 cat-2  align-items-center d-flex justify-content-between">
+                <h1 class="txt">Bag</h1>
+                <img class="cat" src="images/categories/bag.png" alt="">
+              </div>
+              <div class="col-md-4 cat-3 align-items-center d-flex justify-content-between">
+                <h1 class="txt">Shoes</h1>
+                <img class="cat" src="images/categories/shoes.png" alt="">
+              </div>
+            </div>
+          </div>  
+          <h1 class="card-shoes" id="shoes">Shoes</h1>
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card">
+                <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Supply 350</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h3>$200</h3>
+                  <button class="buy-now-button">Buy Now >></button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Nike 360</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h3>$150</h3>
+                  <button class="buy-now-button">Buy Now >></button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Red Airmax</h5>
+                  <p class="card-text red-max">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                  <h3>$250</h3>
+                  <button class="buy-now-button">Buy Now >></button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <h1 class="card-shoes" id="backpack">Backpack</h1>
+          <div class="row row-cols-1 row-cols-md-3 g-4 card-shoes" id="shoes">
+            <div class="col">
+              <div class="card">
+                <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Supply 350</h5>
+                  <h3>$200</h3>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  
+                  <button class="buy-now-button">Buy Now >></button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Nike 360</h5>
+                  <h3>$150</h3>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <button class="buy-now-button">Buy Now >></button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Red Airmax</h5>
+                  <h3>$250</h3>
+                  <p class="card-text red-max">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                  
+                  <button class="buy-now-button">Buy Now >></button>
+                </div>
+              </div>
+            </div>
+          </div>
       </div>
 
-      <div class="ontainer categories">
-        <div class="row">
-          <div class="col-md-4">
-            <h1>Watch</h1>
-            <img src="images/categories/watch.png" alt="">
-          </div>
-          <div class="col-md-4"></div>
-          <div class="col-md-4"></div>
+      <div class="container pink-bg d-flex justify-content-center align-items-center"  id="subscribe">
+        <div>
+          <H3>Let's Stay in Touch</H3>
+        <h6>Get updates on sales, specials and more</h6>
+        <input class="form-control" type="text">
+        <button class="buy-now-button">Subscribe</button>
         </div>
       </div>
+
+      <footer>
+        <small
+        >@2023. Panda Commerce. All rights reserved by panda commerce. Dhaka, Bangladesh</small>
+      </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
